Changes
# # # #

Changes in 0.59
---------------

o   Fridolin Wild (2007-11-28)

	* Dutch stopword list added (thanks to Marco Kalz,
	  Open University Netherlands)
	
	* UTF-8 support enforced in stopword list, package
	  description, textmatrix
	  
	* stemming bug fixed (stemming was _after_
	  filtering by controlled vocabulary
	
	* testing routine added for one-term matrices
	

Changes in 0.58
---------------

o   Fridolin Wild (2006-08-01)

    * added simple <XML> tag handling: tags are automatically
      removed (requested by Simon Lin, Northwestern @ Feb 23, 2006)

    * added arabic support for Buckwalter transliterations
	  (requested by Neal Snider, Stanford @ Feb 21, 2006)
	
	* changed textmatrix() / textvector() standard language 
	  to english

    * textmatrix can now automatically remove terms with only
	  numbers (requested by Simon Lin, Northwestern @ Feb 23, 2006)

    * extended special character stripping ('#', '+', ...)

    * added upper and lower boundaries for global frequencies

    * demo for essay scoring added
	
	* data set with essays (corpus.6) added


o   Fridolin Wild (2006-07-31)

    * added random sample function for corpus selection.
	  index can be returned to allow for re-use of the sample.

    * added dimcalc_fraction()

    * added support to textmatrix() to run not only over directories, 
	  but also over a single file or a vector of files (or a mixed 
	  vector with files and directories)

    * added maxWordLength filtering

    * added maxDocFreq filtering


o   Jeff Verhulst (2006-04-21)

    * bugfix: print.textmatrix()
	  bug appeared: 2nd of jan 2006 (Claudia Mayr)
      fix provided by: Jeff Verhulst, J&J Pharma R&D IM (2006)


Changes in 0.57 (first public release)
--------------------------------------

o   2005-11-23:

    * a lot of minor changes to make documentation better
	
    * smaller code changes
	
    * renamed core functions to lsa(), as.textmatrix(), fold_in()

o   2005-11-22: